# BE-orphanage-management

./: .env-example  .env-jenkins  .isort.cfg  .pre-commit-config.yaml  Dockerfile  Jenkinsfile  README.md  docker-compose.yml  logstash.conf  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  test.py
.github/workflows/: feat-deploy-azure_orphanage-management-web-app.yml  master_orphanage-management-web-app.yml
api_activity/: urls.py
api_activity/managers/: __init__.py  comment.py
api_activity/migrations/: 0001_initial.py  0002_alter_comment_account_alter_comment_activity.py  0003_rename_picture_activity_cover_picture_and_more.py  0004_rename_description_activity_content.py  0005_migrate_activity.py  0006_comment_parent_alter_adoptrequest_status.py  0006_remove_activity_is_active_and_more.py  0007_alter_activity_end_date_alter_activity_start_date.py  0008_adoptrequestdetail_remove_adoptrequest_adopter_and_more.py  0008_migrate_activity_type.py
api_activity/models/: __init__.py  activity.py  activity_type.py  activity_type_group.py  adopt_introduct.py  adopt_request.py  adopt_request_detail.py  comment.py  proof.py
api_admin/: __init__.py  urls.py
api_children/: urls.py
api_statistic/: urls.py
api_user/: urls.py
base/: urls.py
common/: default_scopes.json  scopes.json
core/: settings.py  urls.py
templates/: action_adopt_request.html  embed.html  index.html  invite_email.html  new_activity.html  new_adopt_request.html  reset_password.html  thank_for_donate.html
test/: test_user.py
utils/: __init__.py  activity.py  scopes.py
(+156 files in other folders)
