[metadata]
name = account_utils
version = 0.0.3
author = VietDev
author_email = vietdev@gmail.com
description = A small package supports account functions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/F4-Plus-DUT/BE-orphanage-management
project_urls =
    Bug Tracker = https://github.com/F4-Plus-DUT/BE-orphanage-management/issues 
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = utils
packages = find:
python_requires = >=3.6

[options.packages.find]
where = utils
